...
            ),
            Gaps.v28,
            GestureDetector(
              onTap: onNextTap,
              child: FormButton(
                disabled: _username.isEmpty,
                text: 'Next',
              ),
            ),
          ]),
        ),
      ),
    );
...
